--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(OOP_Project)
 
 set(CMAKE_CXX_STANDARD 14)
 
+set(CMAKE_EXE_LINKER_FLAGS "-static")
+
 add_executable(OOP_Project
         main.cpp
         headers/card.h
