--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,14 +23,8 @@ add_executable(OOP_Project
         headers/enemies/skeleton.hpp
         src/enemies/darkElf.cpp
         headers/enemies/darkElf.hpp
+        src/enemies/enemyFactory.cpp
+        headers/enemies/enemyFactory.hpp
+        headers/enemies/enemyFactory.hpp
+        headers/details.hpp
 )
-
-# Specify SFML directory
-set(SFML_DIR "C:/Users/Cosmin/SFML-2.6.1/lib/cmake/SFML")
-
-# Find SFML package
-set(SFML_STATIC_LIBRARIES TRUE)
-find_package(SFML COMPONENTS system window graphics REQUIRED)
-
-# Link SFML libraries
-target_link_libraries(OOP_Project sfml-system sfml-window sfml-graphics)
